style: update tab size in prism.css for improved code readability

--- a/apps/web/src/prism.css
+++ b/apps/web/src/prism.css
@@ -9,18 +9,17 @@
 code[class*='language-'],
 pre[class*='language-'] {
 	color: #d6deeb;
-	font-family:
-		'Victor Mono', Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono',
-		monospace;
+	font-family: 'Victor Mono', Consolas, Monaco, 'Andale Mono',
+		'Ubuntu Mono', monospace;
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
 	word-break: normal;
 	word-wrap: normal;
 
-	-moz-tab-size: 4;
-	-o-tab-size: 4;
-	tab-size: 4;
+	-moz-tab-size: 2;
+	-o-tab-size: 2;
+	tab-size: 2;
 
 	-webkit-hyphens: none;
 	-moz-hyphens: none;
